# flash-connector

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.microservice.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  requirements.txt
api/app/: cli.py  dependencies.py  main.py  tasks.py
docs/: developer-guide.md  master-plan.md  provider-catalog.md  user-lifecycle.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_tenant_llm_settings.py  0003_promptops_studio.py  0004_multi_provider_runtime.py  0005_nested_tenants_query_params.py  0006_pricing_cost_tracking.py  0007_oidc_auth_users.py  0008_subtenant_code_tracking.py  0009_job_idempotency.py  0010_targets.py  0011_provider_billing_mode.py  0012_subtenant_portal_links.py  0013_wallet_accounts_and_billing_reservations.py  0014_training_few_shot.py  0016_provider_native_batches.py  (+3 more)
providers/: SOURCES.md
scripts/: flashctl
sdk/: README.md  __init__.py  client.py  errors.py  models.py
tests/: conftest.py  test_csrf.py  test_dependencies.py  test_llm_params.py  test_local_login.py  test_oidc.py  test_portal.py  test_pricing.py  test_prompt_studio.py  test_provider_catalog.py  test_provider_endpoint_options.py  test_provider_registry.py  test_provider_registry_schema.py  test_provider_validation.py  test_public_batches.py  test_public_idempotency.py  test_rate_limit.py  test_sdk.py  test_security.py  test_smoke.py  test_targets.py  test_tenants.py  test_training_service.py  test_usage_costs.py
worker/: Dockerfile  run_worker.py
(+159 files in other folders)
