[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-connector-sdk"
version = "0.3.0"
description = "Python SDK for flash-connector async endpoint jobs and training APIs."
readme = "sdk/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "flash-connector maintainers" }
]
dependencies = [
  "httpx>=0.27,<1.0"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
packages = ["sdk"]

